--- a/comcorhd.tronco.me/interrogar-ud/index1.html
+++ b/comcorhd.tronco.me/interrogar-ud/index1.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" http-equiv="content-type" content="text/html; charset=UTF-8; width=device-width, initial-scale=1.0">
     <title>Interrogações recentes: Interrogar UD</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="http://comcorhd.tronco.me/interrogar-ud/style.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   </head>
   <body>
