--- a/comcorhd.tronco.me/interrogar-ud/interrogar_UDnew.html
+++ b/comcorhd.tronco.me/interrogar-ud/interrogar_UDnew.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta name="viewport" http-equiv="content-type" content="text/html; charset=UTF-8; width=device-width, initial-scale=1.0">
-    <title>Nova interrogação: Interrogar UD</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <title>Nova interrogação: Interrogatório</title>
+    <link href="http://comcorhd.tronco.me/interrogar-ud/style.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="header">
-      <h1>Interrogar UD</h1>
+      <h1>Interrogatório</h1>
       <h2><a href="index.cgi">interrogações recentes</a> - nova interrogação</h2>
     </div>
     <div class="content">
