--- a/comcorhd.tronco.me/interrogar-ud/resultados/link1.html
+++ b/comcorhd.tronco.me/interrogar-ud/resultados/link1.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta name="viewport" http-equiv="content-type" content="text/html; charset=UTF-8; width=device-width, initial-scale=1.0">
-    <title>link de pesquisa 1 (203): Interrogar UD</title>
-    <link href="../style.css" rel="stylesheet" type="text/css">
+    <title>link de pesquisa 1 (203): Interrogatório</title>
+    <link href="http://comcorhd.tronco.me/interrogar-ud/style.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   </head>
-  <body onload="carregar()">
+  <body>
     <div class="header">
       <h1><span id="combination">link de pesquisa 1</span> (203)</h1>
       <p>critério y#z#k&nbsp;&nbsp;&nbsp; arquivo_UD&nbsp;&nbsp;&nbsp; <span id="data">data</span>&nbsp;&nbsp;&nbsp;
@@ -16,21 +16,9 @@
     </div>
     <div class="content"> <br>
       <br>
-      <div class="tab"> <button class="tablinks" onclick="openCity(event, 'version')">
-          Controle de versão </button> <button class="tablinks" onclick="openCity(event, 'filtrar_tab')">
+      <div class="tab"> <button class="tablinks" onclick="openCity(event, 'filtrar_tab')">
           Filtrar resultados </button> <button class="tablinks" onclick="openCity(event, 'conllu')">
           Transformar em CoNLLU </button> </div>
-      <div class="tabcontent" id="version"> <br>
-        <br>
-        <br>
-        <p><label for="carregar_edit">Colar um link:<br>
-        <input id="carregar_edit" name="carregar_edit" type="text"></label> <input id="carregarversion"
-onclick="carregar_version()" value="Carregar versão" class="btn-gradient green mini"
-type="button"><br><input onclick="enviar('2')" id="salvar_btn" value="Gerar link para a versão atual"
-class="btn-gradient orange mini" style="margin-left:0px" type="button"> <input
-          id="link_edit2" style="display:none" type="text">
-        <div id="gerado2" style="display:none"><b>Link gerado!</b></div></p>
-      </div>
       <div class="tabcontent" id="filtrar_tab"> <br>
         <br>
         <br>
@@ -54,10 +42,7 @@ value="Baixar arquivo" class="btn-gradient orange mini" type="submit"></p></form
       <br>
       <br>
       <a onclick="tudo('abrir')" style="cursor:pointer">Abrir tudo</a> &nbsp; <a style="cursor:pointer" onclick="tudo('fechar')">Fechar tudo</a> &nbsp; <a style="cursor:pointer" onclick="tudo('marcar')">Marcar tudo</a> &nbsp; <a style="cursor:pointer" onclick="tudo('desmarcar')">Desmarcar tudo</a><br><br>
-      <!--SPLIT--> <br><input onclick="enviar('1')" id="salvar_btn" value="Gerar link para a versão atual"
-class="btn-gradient orange" style="margin-left:0px" type="button"> <input id="link_edit1"
-        style="display:none" type="text">
-      <div id="gerado1" style="display:none"><b>Link gerado!</b></div>
+      <!--SPLIT--> <br></div>
 
 <script>
 function excluir_selection() {
@@ -90,23 +75,7 @@ document.getElementById(nome).style.display = "none"
 document.getElementById(botao).value = "Mostrar anotação"
 }
 }
-function carregar_version(){
-window.location = window.location.href.split("?")[0] + "?" + document.getElementById("carregar_edit").value.split("?")[1]
-}
-function gerado_false(id) {
-document.getElementById("gerado"+id).style.display = "none"
-}
-function carregar() {
-let url_href = window.location.href
-let url = new URL(url_href)
-//COMMENT
-}
-function enviar(id) {
-document.getElementById("gerado"+id).style.display = "inline"
-setTimeout("gerado_false("+id+")", 1000)
-document.getElementById("link_edit"+id).style.display = "inline"
-//ENVIAR
-}
+
 function apagar() {
 if (confirm('Apagar interrogação "' + document.getElementById("combination").innerHTML + '"?')) {
 window.location = "../apagar.cgi?query=link1"
