--- a/comcorhd.tronco.me/interrogar-ud/index1.html
+++ b/comcorhd.tronco.me/interrogar-ud/index1.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta name="viewport" http-equiv="content-type" content="text/html; charset=UTF-8; width=device-width, initial-scale=1.0">
-    <title>Interrogações recentes: Interrogar UD</title>
+    <title>Interrogações recentes: Interrogatório</title>
     <link href="http://comcorhd.tronco.me/interrogar-ud/style.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="header">
-      <h1>Interrogar UD</h1>
+      <h1>Interrogatório</h1>
       <h2>interrogações recentes - <a href="interrogar.cgi">nova
           interrogação</a></h2>
     </div>
