--- a/comcorhd.tronco.me/interrogar-ud/arquivo_ud.html
+++ b/comcorhd.tronco.me/interrogar-ud/arquivo_ud.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta name="viewport" http-equiv="content-type" content="text/html; charset=UTF-8; width=device-width, initial-scale=1.0">
-    <title>Arquivos UD: Interrogar UD</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <title>Arquivos UD: Interrogatório</title>
+    <link href="http://comcorhd.tronco.me/interrogar-ud/style.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   </head>
   <body>
