--- a/comcorhd.tronco.me/interrogar-ud/interrogar_UDnew.html
+++ b/comcorhd.tronco.me/interrogar-ud/interrogar_UDnew.html
@@ -13,7 +13,7 @@
     </div>
     <div class="content">
       <form action="interrogar.cgi" method="post">
-        <p><div class="tooltip" style="display:inline">Pesquisa: (?)<span class="tooltiptext"><h3>Colunas UD:</h3>1: ID | 2: WORD | 3: LEMMA | 4: UPOS | 5: XPOS | 6: FEATS | 7: DEPHEAD | 8: DEPREL | 9: DEPS | 10: MISC<h3>Sintaxe:</h3>critério [parâmetros]<!--SPLIT2--></span></div><br>
+        <p><div class="tooltip" style="display:inline">Pesquisa: (?)<span class="tooltiptext"><h3>Colunas UD:</h3>1: ID | 2: WORD | 3: LEMMA | 4: UPOS | 5: XPOS | 6: FEATS | 7: DEPHEAD | 8: DEPREL | 9: DEPS | 10: MISC<h3>Sintaxe:</h3>nº do critério + espaço + parâmetros<!--SPLIT2--></span></div><br>
           <input name="pesquisa" required="required" type="text"></p>
         <p>Nome da pesquisa:<br>
           <input name="nome" required="required" type="text"></p>
@@ -27,7 +27,7 @@ type="submit"></p>
         <br>
       </form>
       <p><strong>Sintaxe da pesquisa:</strong></p>
-      <pre>critério [parâmetros específicos do critério]</pre>
+      <pre>número do critério + espaço + parâmetros específicos do critério escolhido</pre>
       <p><strong><br>
         </strong></p>
       <p><strong>Critérios de pesquisa:</strong></p>
