--- a/comcorhd.tronco.me/interrogar-ud/resultados/link1.html
+++ b/comcorhd.tronco.me/interrogar-ud/resultados/link1.html
@@ -23,7 +23,7 @@
         <br>
         <br>
         <form action="../filtrar.cgi" method="POST"> <p><label for="pesquisa">
-            <div class="tooltip">Expressão do filtro:<span class="tooltiptext">As sentenças serão removidas da página atual e salvas em uma página separada. Se for do desejo, é possível retornar à pesquisa original posteriormente.<br><br>Sintaxe: 'critério [parâmetros]'</span></div><br>
+            <div class="tooltip">Expressão do filtro (?):<span class="tooltiptext">As sentenças serão removidas da página atual e salvas em uma página separada. Se for do desejo, é possível retornar à pesquisa original posteriormente.<br><br>Sintaxe: nº do critério + espaço + parâmetros</span></div><br>
             <input id="pesquisa" name="pesquisa" type="text" required></label>
             <br><br> <label for="nome_pesquisa">Nome do filtro (opcional):<br>
 <input id="nome_pesquisa" name="nome_pesquisa" type="text" ></label>
@@ -41,7 +41,7 @@ value="Baixar arquivo" class="btn-gradient orange mini" type="submit"></p></form
       <br>
       <br>
       <br>
-      <a onclick="tudo('abrir')" style="cursor:pointer">Abrir tudo</a> &nbsp; <a style="cursor:pointer" onclick="tudo('fechar')">Fechar tudo</a> &nbsp; <a style="cursor:pointer" onclick="tudo('marcar')">Marcar tudo</a> &nbsp; <a style="cursor:pointer" onclick="tudo('desmarcar')">Desmarcar tudo</a><br><br>
+      <a onclick="tudo('abrir')" style="cursor:pointer">Abrir anotações</a> &nbsp; <a style="cursor:pointer" onclick="tudo('fechar')">Fechar anotações</a> &nbsp; <a style="cursor:pointer" onclick="tudo('marcar')">Marcar tudo</a> &nbsp; <a style="cursor:pointer" onclick="tudo('desmarcar')">Desmarcar tudo</a><br><br>
       <!--SPLIT--> <br></div>
 
 <script>
@@ -73,6 +73,16 @@ document.getElementById(botao).value = "Esconder anotação"
 }else{
 document.getElementById(nome).style.display = "none"
 document.getElementById(botao).value = "Mostrar anotação"
+}
+}
+
+function contexto(nome, botao){
+if (document.getElementById(nome).style.display == "none"){
+document.getElementById(nome).style.display = "block"
+document.getElementById(botao).value = "Esconder contexto"
+}else{
+document.getElementById(nome).style.display = "none"
+document.getElementById(botao).value = "Mostrar contexto"
 }
 }
 
