sistema de inquéritos

--- a/comcorhd.tronco.me/interrogar-ud/arquivo_ud.html
+++ b/comcorhd.tronco.me/interrogar-ud/arquivo_ud.html
@@ -9,7 +9,7 @@
   <body>
     <div class="header">
       <h1>Arquivos UD</h1>
-      <h2><a href="index.cgi">interrogações recentes</a> - <a href="interrogar.cgi">nova interrogação</a></h2>
+      <h2><a href="index.cgi">interrogações recentes</a> - <a href="interrogar.cgi">nova interrogação</a> - <a href="inqueritos.cgi" target="_blank">sistema de inquéritos</a></h2>
     </div>
     <div class="content">
       <form action="arquivo_ud.cgi" method="post" enctype="multipart/form-data"> <label for="arquivo">Novo arquivo UD:<br>
