--- a/comcorhd.tronco.me/interrogar-ud/resultados/link1.html
+++ b/comcorhd.tronco.me/interrogar-ud/resultados/link1.html
@@ -11,14 +11,15 @@
       <h1><span id="combination">link de pesquisa 1</span> (203)</h1>
       <p>critério y#z#k&nbsp;&nbsp;&nbsp; arquivo_UD&nbsp;&nbsp;&nbsp; <span id="data">data</span>&nbsp;&nbsp;&nbsp;
         <em><a href="#" onclick="apagar()">excluir</a></em></p>
-      <h2><a href="../index.cgi">interrogações recentes</a> - <a href="../interrogar.cgi">nova
+      <h2><a href="../index.cgi">interrogações recentes</a> - <a href="../interrogar.cgi" - <a href="../inqueritos.cgi" target="_blank">sistema de inquéritos</a>>nova
           interrogação</a></h2>
     </div>
     <div class="content"> <br>
       <br>
-      <div class="tab"> <button class="tablinks" onclick="openCity(event, 'filtrar_tab')">
+      <div class="tab"><button id="fechartabs" style="display:none" class="fechartabs" onclick="fechar_tabs()">
+      × </button> <button class="tablinks" onclick="openCity(event, 'filtrar_tab')">
           Filtrar resultados </button> <button class="tablinks" onclick="openCity(event, 'conllu')">
-          Transformar em CoNLLU </button> </div>
+          Transformar em CoNLLU </button></div>
       <div class="tabcontent" id="filtrar_tab"> <br>
         <br>
         <br>
@@ -110,6 +111,17 @@ function openCity(evt, cityName) {
     // Show the current tab, and add an "active" class to the button that opened the tab
     document.getElementById(cityName).style.display = "block";
     evt.currentTarget.className += " active";
+
+    document.getElementById("fechartabs").style.display = "block"
+}
+function fechar_tabs() {
+	document.getElementById('conllu').style.display = "none"
+	document.getElementById('filtrar_tab').style.display = "none"
+	document.getElementById('fechartabs').style.display = "none"
+}
+
+function inquerito(ide) {
+    document.getElementById(ide).submit()
 }
 		</script>
   </body>
