sistema de inquéritos

--- a/comcorhd.tronco.me/interrogar-ud/index1.html
+++ b/comcorhd.tronco.me/interrogar-ud/index1.html
@@ -10,7 +10,7 @@
     <div class="header">
       <h1>Interrogatório</h1>
       <h2>interrogações recentes - <a href="interrogar.cgi">nova
-          interrogação</a> - <a href="inqueritos.cgi" target="_blank">sistema de inquéritos</a></h2>
+          interrogação</a></h2>
     </div>
     <div class="content">
       <!--SPLIT--> </div>
