--- a/comcorhd.tronco.me/interrogar-ud/interrogar_UDnew.html
+++ b/comcorhd.tronco.me/interrogar-ud/interrogar_UDnew.html
@@ -9,7 +9,7 @@
   <body>
     <div class="header">
       <h1>Interrogatório</h1>
-      <h2><a href="index.cgi">interrogações recentes</a> - nova interrogação - <a href="inqueritos.cgi" target="_blank">sistema de inquéritos</a></h2>
+      <h2><a href="index.cgi">interrogações recentes</a> - nova interrogação</h2>
     </div>
     <div class="content">
       <form action="interrogar.cgi" method="post">
@@ -35,6 +35,7 @@ type="submit"></p>
       <br>
       <h3>Links úteis:</h3>
       <div class="container">
+        <p><a href="inquerito.py" target="_blank">Sistema de inquéritos</a></p>
         <p><a href="arquivo_ud.cgi">Acessar repositório dos arquivos UD</a></p>
         <p><a href="http://github.com/alvelvis/ACDC-UD" target="_blank">Acessar GitHub do projeto</a></p>
       </div>
