--- a/comcorhd.tronco.me/interrogar-ud/resultados/link1.html
+++ b/comcorhd.tronco.me/interrogar-ud/resultados/link1.html
@@ -11,7 +11,7 @@
       <h1><span id="combination">link de pesquisa 1</span> (203)</h1>
       <p>critério y#z#k&nbsp;&nbsp;&nbsp; arquivo_UD&nbsp;&nbsp;&nbsp; <span id="data">data</span>&nbsp;&nbsp;&nbsp;
         <em><a href="#" onclick="apagar()">excluir</a></em></p>
-      <h2><a href="../index.cgi">interrogações recentes</a> - <a href="../interrogar.cgi" - <a href="../inqueritos.cgi" target="_blank">sistema de inquéritos</a>>nova
+      <h2><a href="../index.cgi">interrogações recentes</a> - <a href="../interrogar.cgi"> nova
           interrogação</a></h2>
     </div>
     <div class="content"> <br>
