--- a/comcorhd.tronco.me/interrogar-ud/index1.html
+++ b/comcorhd.tronco.me/interrogar-ud/index1.html
@@ -3,25 +3,27 @@
   <head>
     <meta name="viewport" http-equiv="content-type" content="text/html; charset=UTF-8; width=device-width, initial-scale=1.0">
     <title>Interrogações recentes: Interrogatório</title>
-    <link href="http://comcorhd.tronco.me/interrogar-ud/style.css" rel="stylesheet" type="text/css">
+    <link href="/interrogar-ud/style.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   </head>
   <body>
+  <div style="display: flex; flex-flow: column; height:100vh;">
     <div class="header">
       <h1>Interrogatório</h1>
-      <h2>interrogações recentes - <a href="interrogar.cgi">nova
+      <h2>interrogações recentes - <a href="/cgi-bin/interrogar.cgi">nova
           interrogação</a></h2>
     </div>
-    <div class="content">
+    <div class="content" style="overflow: auto; flex: 1;">
       <!--SPLIT--> </div>
+      </div>
     <script>
 function carregar_version(){
         var link_combination = document.getElementById("carregar_edit").value.split("/")
-        window.location = "resultados/" + link_combination[link_combination.length-1].split("?")[0] + "?" + document.getElementById("carregar_edit").value.split("?")[1]
+        window.location = "/interrogar-ud/resultados/" + link_combination[link_combination.length-1].split("?")[0] + "?" + document.getElementById("carregar_edit").value.split("?")[1]
 }
 function apagar(url) {
 if (confirm('Apagar interrogação "' + url + '"?')) {
-window.location = "apagar.cgi?query="+url
+window.location = "/cgi-bin/apagar.cgi?query="+url
 }
 }
 </script>
