--- a/comcorhd.tronco.me/interrogar-ud/inquerito.html
+++ b/comcorhd.tronco.me/interrogar-ud/inquerito.html
@@ -3,13 +3,13 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8; width=device-width, initial-scale=1.0"
       name="viewport">
-    <link href="http://comcorhd.tronco.me/interrogar-ud/style_inquerito.css" rel="stylesheet"
+    <link href="/interrogar-ud/style_inquerito.css" rel="stylesheet"
       type="text/css">
     <title>Sistema de inquéritos - Interrogatório</title>
   </head>
   <body>
     <div class="header">
-      <form action="inquerito.py" method="POST">
+      <form action="/cgi-bin/inquerito.py" method="POST">
         <p> <label for="textheader"></label></p>
         <div class="tooltip">Novo inquérito (?):<span class="tooltiptext">Insira o
             "# sent_id" ou "# text" da sentença para a qual deseja abrir
