--- a/comcorhd.tronco.me/interrogar-ud/index1.html
+++ b/comcorhd.tronco.me/interrogar-ud/index1.html
@@ -5,15 +5,17 @@
     <title>Interrogações recentes: Interrogatório</title>
     <link href="/interrogar-ud/style.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+    <script src="/interrogar-ud/resultados.js"></script>
   </head>
   <body>
-  <div style="display: flex; flex-flow: column; height:100vh;">
+  <button onclick="topFunction()" id="myBtn" title="Voltar ao topo">Voltar ao topo</button>
+  <div><!--style="display: flex; flex-flow: column; height:100vh;"-->
     <div class="header">
       <h1>Interrogatório</h1>
       <h2>interrogações recentes - <a href="/cgi-bin/interrogar.cgi">nova
           interrogação</a></h2>
     </div>
-    <div class="content" style="overflow: auto; flex: 1;">
+    <div class="content"><!-- style="overflow: auto; flex: 1;-->
       <!--SPLIT--> </div>
       </div>
     <script>
