--- a/comcorhd.tronco.me/interrogar-ud/inquerito.html
+++ b/comcorhd.tronco.me/interrogar-ud/inquerito.html
@@ -5,7 +5,10 @@
       name="viewport">
     <link href="/interrogar-ud/style_inquerito.css" rel="stylesheet"
       type="text/css">
-    <title>Sistema de inquéritos - Interrogatório</title>
+    <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+    <script src="/interrogar-ud/resultados.js"></script>
+    <button onclick="topFunction()" id="myBtn" title="Voltar ao topo">Voltar ao topo</button>
+    <title>Sistema de inquéritos</title>
   </head>
   <body>
     <div class="header">
