--- a/comcorhd.tronco.me/interrogar-ud/interrogar_UDnew.html
+++ b/comcorhd.tronco.me/interrogar-ud/interrogar_UDnew.html
@@ -16,16 +16,17 @@
     <div style="width: 520px; margin: 0px 30px">
       <form action="/cgi-bin/interrogar.cgi" method="post">
         <p><div class="tooltip" style="display:inline">Pesquisa: (?)<span class="tooltiptext"><h3>Sintaxe da pesquisa:</h3>nº do critério + espaço + parâmetros<br><br>Consulte os critérios no quadro à direita.<br><br>Caso nenhum critério seja escolhido, valerá o critério 1: expressão regular.<h3>Colunas UD:</h3>1: ID | 2: WORD | 3: LEMMA | 4: UPOS | 5: XPOS | 6: FEATS | 7: DEPHEAD | 8: DEPREL | 9: DEPS | 10: MISC</span></div><br>
-          <input name="pesquisa" id="pesquisa" required="required" type="text"></p>
-        <p>Nome da pesquisa:<br>
-          <input name="nome" required="required" type="text"></p>
+          <input name="pesquisa" id="pesquisa" required="required" type="text" autofocus></p>
           <p><select name="conllu">
             <option value="1">1</option>
             <option value="2">2</option>
           </select>
         </p>
-        <p><input name="enviar" value="Pesquisar" class="btn-gradient orange" style="margin:0px"
-type="submit"></p>
+        <p><input type=radio name=meth value="teste" style="display:inline" onclick="document.getElementById('meth_salvar').style.display = 'none'" checked>Teste</input> <input type=radio name=meth value="salvar" style="display:inline" onclick="document.getElementById('meth_salvar').style.display = 'block'; document.getElementById('nome').focus();" >Salvar</input></p>
+      <p><div id="meth_salvar" style="display:none">Nome da pesquisa:<br>
+        <input id="nome" name="nome" type="text"></div></p>
+        <p><input name="enviar" id="enviar" value="Pesquisar" class="btn-gradient orange" style="margin:0px"
+type="submit" onclick="document.getElementById('enviar').value='Pesquisando...'"></p>
         <br>
       </form>
       </div>
@@ -44,7 +45,7 @@ type="submit"></p>
     <body>
     <script>
         function pesquisa(numero) {
-            document.getElementById('pesquisa').value = document.getElementById(numero).innerHTML;
+            document.getElementById('pesquisa').value = document.getElementById(numero).innerHTML.replace(/&amp;/g, '&').replace(/&gt;/g, '>');
         }
     </script>
   </body>
