--- a/comcorhd.tronco.me/interrogar-ud/resultados/link1.html
+++ b/comcorhd.tronco.me/interrogar-ud/resultados/link1.html
@@ -40,7 +40,7 @@
             <br><br> <label for="nome_pesquisa">Nome do filtro (opcional):<br>
 <input id="nome_pesquisa" name="nome_pesquisa" type="text" ></label>
             <br><br> <input id="filtrar"
-value="Filtrar pesquisa" class="btn-gradient orange mini" style="margin-left:0px" type="submit">&nbsp;ou&nbsp;<input id="filtrarsel" value="Remover seleção" class="btn-gradient orange mini" type="button" onclick="excluir_selection()"></p></form>
+value="Filtrar pesquisa" class="btn-gradient orange mini" style="margin-left:0px" type="submit">&nbsp;ou&nbsp;<input id="filtrarsel" value="Filtrar itens selecionados" class="btn-gradient orange mini" type="button" onclick="excluir_selection()"></p></form>
       </div>
       <div class="tabcontent" id="conllu"> <br>
         <br>
