--- a/comcorhd.tronco.me/interrogar-ud/resultados/link1.html
+++ b/comcorhd.tronco.me/interrogar-ud/resultados/link1.html
@@ -29,7 +29,7 @@
       <div class="tabcontent" id="ver"> <br>
       <br>
       <br>
-      <p><a onclick="tudo('abrir')" style="cursor:pointer">Abrir anotações</a><br><a style="cursor:pointer" onclick="tudo('fechar')">Fechar anotações</a><br><a style="cursor:pointer" onclick="tudo('marcar')">Marcar tudo</a><br><a style="cursor:pointer" onclick="tudo('desmarcar')">Desmarcar tudo</a><!--br><a style="cursor:pointer" onclick="paginacao()">Remover paginação</a--></p>
+      <p><a onclick="tudo('abrir')" style="cursor:pointer">Abrir anotações</a><br><a style="cursor:pointer" onclick="tudo('fechar')">Fechar anotações</a><br><a style="cursor:pointer" onclick="tudo('marcar')">Marcar tudo</a><br><a style="cursor:pointer" onclick="tudo('desmarcar')">Desmarcar tudo</a><br><a style="cursor:pointer" onclick="abrir_script()">Executar script</a> <div id="script" style="display:none"><!--script--></div><!--br><a style="cursor:pointer" onclick="paginacao()">Remover paginação</a--></p>
       </div>
       <div class="tabcontent" id="filtrar_tab"> <br>
         <br>
@@ -40,7 +40,7 @@
             <br><br> <label for="nome_pesquisa">Nome do filtro (opcional):<br>
 <input id="nome_pesquisa" name="nome_pesquisa" type="text" ></label>
             <br><br> <input id="filtrar"
-value="Filtrar pesquisa" class="btn-gradient orange mini" style="margin-left:0px" type="submit">&nbsp;ou&nbsp;<input id="filtrarsel" value="Filtrar itens selecionados" class="btn-gradient orange mini" type="button" onclick="excluir_selection()"></p></form>
+value="Filtrar pesquisa" class="btn-gradient orange mini" style="margin-left:0px" type="submit"><br>&nbsp;ou&nbsp;<br><input id="filtrarsel" style="margin-left:0px" value="Filtrar itens selecionados" class="btn-gradient orange mini" type="button" onclick="excluir_selection()"></p></form>
       </div>
       <div class="tabcontent" id="conllu"> <br>
         <br>
