--- a/comcorhd.tronco.me/interrogar-ud/index1.html
+++ b/comcorhd.tronco.me/interrogar-ud/index1.html
@@ -7,7 +7,7 @@
     <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
     <script src="/interrogar-ud/resultados.js"></script>
   </head>
-  <body>
+  <body style="background-color:#F8F8F8;">
   <button onclick="topFunction()" id="myBtn" title="Voltar ao topo">Voltar ao topo</button>
   <div><!--style="display: flex; flex-flow: column; height:100vh;"-->
     <div class="header">
@@ -15,7 +15,7 @@
       <h2>interrogações recentes - <a href="/cgi-bin/interrogar.cgi">nova
           interrogação</a></h2>
     </div>
-    <div class="content"><!-- style="overflow: auto; flex: 1;-->
+    <div class="content" style="width:60%;"><!-- style="overflow: auto; flex: 1;-->
       <!--SPLIT--> </div>
       </div>
     <script>
