--- a/comcorhd.tronco.me/interrogar-ud/inquerito.html
+++ b/comcorhd.tronco.me/interrogar-ud/inquerito.html
@@ -35,4 +35,19 @@ type="submit"> </p>
     <!--SPLIT-->
     </div>
   </body>
+<script>
+function confirmar(etiqueta) {
+	if (confirm('Apagar a etiqueta "' + etiqueta + '" e seus respectivos inquéritos?') == true) {
+		return true;
+	}
+}
+function enviar() {
+  var fields, i;
+  fields = document.getElementsByClassName("field");
+  for (i = 0; i < fields.length; i++) {
+    fields[i].value = document.getElementById(fields[i].name).innerHTML.replace('<br>', '').replace('</div>', '').replace('<div>', '');
+  }
+  document.getElementById('dados_inquerito').submit();
+}
+</script>
 </html>
